--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
           <div class="price">
             <span
               class="price--current"
-              aria-label="Current price 149 dollars 99 cents"
               >$149.99</span
             >
-            <span class="price--old" aria-label="Old price 169 dollars 99 cents"
+            <span class="price--old"
               >$169.99</span
             >
           </div>
